--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Shopify Compliance & Growth — Advisor Dashboard</title>
 
+   <!-- Favicon -->
+<link rel="icon" type="image/png" href="https://cdn.shopify.com/assets/images/logos/shopify-bag.png" />
+  
 <!-- Tailwind (utility helpers) + Font Awesome -->
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -1482,6 +1485,7 @@ s
 
 </body>
 </html>
+
 
 
 
