--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Shopify Compliance & Growth — Advisor Dashboard</title>
-
-   <!-- Favicon -->
+  
+  <!-- Favicon -->
 <link rel="icon" type="image/png" href="https://cdn.shopify.com/assets/images/logos/shopify-bag.png" />
   
 <!-- Tailwind (utility helpers) + Font Awesome -->
@@ -435,16 +435,48 @@ h1, h2, h3, h4 {
 <body>
 
 <!-- Loading -->
-<section id="loading" class="min-h-screen flex items-center justify-center" style="background: linear-gradient(135deg, #2a2e57 0%, #2f6164 100%);">
-  <div class="max-w-xl w-full p-6 text-center">
-    <img src="https://cdn.shopify.com/assets/images/logos/shopify-bag.png" class="mx-auto h-14 mb-4" alt="Shopify"/>
-    <h1 class="text-2xl font-semibold text-white">Connecting you with a Specialist</h1>
-<p class="mt-2" style="color: rgba(255, 255, 255, 0.6);">Preparing your secure session — this takes a moment.</p>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Shopify-Style Loader Demo</title>
 
-    <div class="relative mx-auto mt-8 w-28 h-28">
-      <div class="w-28 h-28 rounded-full border-4 border-gray-200"></div>
-      <div class="absolute inset-0 rounded-full border-4 border-[var(--green)] border-t-transparent animate-spin"></div>
-      <div id="pct" class="absolute inset-0 flex items-center justify-center font-medium text-white">0%</div>
+<!-- Tailwind for basic layout -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<style>
+:root {
+  --green: #00A651;
+}
+
+/* Slow spinner (45 seconds per rotation) */
+@keyframes spin-shopify {
+  0%   { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+.slow-spin {
+  animation: spin-shopify 45s linear infinite;
+}
+
+/* Hidden helper */
+.hidden { display: none !important; }
+</style>
+</head>
+<body class="bg-gray-100">
+
+<!-- LOADING PAGE -->
+<section id="loading" class="min-h-screen flex flex-col items-center justify-center"
+         style="background: linear-gradient(135deg, #3BAFA7 0%, #3BAFA7 40%, #3BAFA7 100%);"
+>
+  <img src="https://cdn.shopify.com/assets/images/logos/shopify-bag.png"
+       class="h-14 mb-6" alt="Shopify">
+  <h1 class="text-2xl font-semibold text-white">Connecting you with a Specialist</h1>
+  <p class="mt-2 text-white/70">Preparing your secure session — this takes a moment.</p>
+
+  <div class="relative mx-auto mt-8 w-28 h-28">
+    <div class="w-28 h-28 rounded-full border-4 border-gray-200"></div>
+    <div id="spinner"
+         class="absolute inset-0 rounded-full border-4 border-[var(--green)] border-t-transparent animate-spin"></div>
+    <div id="pct"
+         class="absolute inset-0 flex items-center justify-center font-medium text-white">0%</div>
   </div>
 </section>
 
@@ -457,7 +489,7 @@ h1, h2, h3, h4 {
       <div class="flex items-center gap-4">
         <img src="https://cdn.shopify.com/assets/images/logos/shopify-bag.png" alt="Shopify" class="h-10"/>
         <div>
-          <h1 class="text-2xl font-bold text-gray-900">Shopify Partner Desk</h1>
+          <h1 class="text-2xl font-bold text-gray-900">Shopify Support Portal</h1>
           <p class="text-sm text-gray-600 font-medium">Helping merchants grow safely & profitably</p>
         </div>
       </div>
@@ -494,7 +526,7 @@ h1, h2, h3, h4 {
 
     <!-- Bio -->
     <p class="text-sm text-gray-700 leading-relaxed text-center max-w-2xl mx-auto animate-slideUp">
-      I help Shopify store owners resolve compliance challenges and unlock growth with tailored marketing, SEO, and performance optimization strategies. Share your case to get started.
+      We help Shopify store owners resolve compliance challenges and unlock growth with tailored marketing, SEO, and performance optimization strategies. Share your case to get started.
     </p>
 
     <!-- Contact Buttons -->
@@ -605,10 +637,10 @@ h1, h2, h3, h4 {
         <div class="flex items-start justify-between">
           <div>
             <div class="text-sm text-gray-500 font-medium uppercase tracking-wide">Ticket</div>
-            <div class="text-3xl font-bold shopify-heading">#4792-GS47</div>
+            <div class="text-3xl font-bold shopify-heading" #4792-GS47</div>
           </div>
           <div class="text-sm text-gray-600 text-right">
-            <div>Partner ID: <span class="font-bold text-gray-900">4300520</span></div>
+            <div>Partner ID: <span class="font-bold text-gray-900">4401166</span></div>
             <div class="mt-1">Status: <span class="text-green-700 font-bold">Active</span></div>
           </div>
         </div>
@@ -1045,7 +1077,7 @@ h1, h2, h3, h4 {
           “Vertex guided us through a Shopify Plus migration with zero downtime. 
           Our checkout experience is now faster, and revenue jumped 
           <span class="font-semibold text-gray-900">40% in one quarter</span>. 
-          His team’s professionalism is unmatched.”
+          Their team’s professionalism is unmatched.”
         </p>
         <div class="flex items-center gap-3">
           <img src="https://i.pinimg.com/736x/74/51/21/74512116a58837c06d92abc54ed0c0c2.jpg" 
@@ -1315,7 +1347,7 @@ setInterval(showNextImage, 5000); // 5s per slide
         <div>
           <h3 class="text-lg sm:text-xl md:text-2xl font-bold text-gray-900">Contact Advisor</h3>
           <div class="text-xs sm:text-sm text-gray-600 mt-1">
-            Ticket <span id="ticketRef" class="font-bold text-gray-900">#4792-GS47</span>
+            Ticket <span id="ticketRef" class="font-bold text-gray-900" #4792-GS47</span>
           </div>
         </div>
         <button aria-label="Close" id="modalCloseBtn" class="text-gray-500 hover:text-gray-800 p-2 rounded-lg hover:bg-gray-100 transition-colors">
@@ -1331,7 +1363,7 @@ setInterval(showNextImage, 5000); // 5s per slide
         <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
           <div>
             <label class="block text-sm font-semibold text-gray-700 mb-1">Ticket ID</label>
-            <input id="ticketInput" type="text" value="#4792-GS47" readonly class="w-full rounded-lg border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-500 focus:outline-none" />
+            <input id="ticketInput" type="text" value="#S2780-HA921" readonly class="w-full rounded-lg border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-500 focus:outline-none" />
           </div>
           <div>
             <label class="block text-sm font-semibold text-gray-700 mb-1">Store URL</label>
@@ -1387,7 +1419,7 @@ setInterval(showNextImage, 5000); // 5s per slide
     <div class="widget-header-shopify text-white flex items-center gap-4">
       <img id="waStaffImg" src="https://i.pravatar.cc/80?img=12" alt="Advisor" class="w-12 h-12 rounded-full border-2 border-white">
       <div class="flex-1">
-        <div class="font-bold text-lg">Vertex Dimensions</div>
+        <div class="font-bold text-lg">Juan Manuel</div>
         <div class="text-sm opacity-90">Shopify Compliance & Growth Specialist</div>
       </div>
       <button id="waCloseBtn" class="text-white/90 hover:text-white p-2 rounded-lg hover:bg-white/10 transition-colors">
@@ -1398,10 +1430,10 @@ setInterval(showNextImage, 5000); // 5s per slide
       👋 Hi — We help you with compliance, payments, SEO, marketing & sales. Start a chat and I'll guide you through.
     </div>
     <div class="px-6 pb-6 space-y-3">
-      <a href="https://wa.me/13652852411" target="_blank" class="w-full block btn-shopify text-white py-3 rounded-lg text-center font-semibold">
+      <a href="https://wa.me/1365285241113652852411" target="_blank" class="w-full block btn-shopify text-white py-3 rounded-lg text-center font-semibold">
         <i class="fa-brands fa-whatsapp mr-2"></i> Start Chat
       </a>
-      <a href="https://t.me/thevertexdimensions" target="_blank" class="w-full block btn-wix text-white py-3 rounded-lg text-center font-semibold">
+      <a href="https://t.me/thevertexdimension" target="_blank" class="w-full block btn-wix text-white py-3 rounded-lg text-center font-semibold">
         <i class="fa-brands fa-telegram mr-2"></i> Message (Telegram)
       </a>
       <a href="mailto:thevertexdimensions01@gmail.com" class="w-full block bg-gray-900 hover:bg-gray-800 text-white py-3 rounded-lg text-center font-semibold transition-colors">
@@ -1475,16 +1507,30 @@ function handleSubmit(e){
     'Message: ' + message
   );
 
-  if(method==='whatsapp') url='https://wa.me/13652852411?text=' + body;
-  else if(method==='telegram') url='https://t.me/thevertexdimensions'; // <- TELEGRAM LINK
-  else if(method==='email') url='mailto:thevertexdimensions01@gmail.com?subject=Support Request&body=' + body;
-s
+  if(method==='whatsapp') url='https://wa.me13652852411?text=' + body;
+  else if(method==='telegram') url='https://t.me/thevertexdimension'; // <- TELEGRAM LINK
+  else if(method==='email') url='mailto:thevertexdimensionso1@gmail.com?subject=Support Request&body=' + body;
+
   window.open(url,'_blank');
 }
 </script>
-
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
