--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ h1, h2, h3, h4 {
             <div class="text-3xl font-bold shopify-heading" #4792-GS47</div>
           </div>
           <div class="text-sm text-gray-600 text-right">
-            <div>Partner ID: <span class="font-bold text-gray-900">4401166</span></div>
+            <div>Partner ID: <span class="font-bold text-gray-900"> 4300520</span></div>
             <div class="mt-1">Status: <span class="text-green-700 font-bold">Active</span></div>
           </div>
         </div>
@@ -1419,7 +1419,7 @@ setInterval(showNextImage, 5000); // 5s per slide
     <div class="widget-header-shopify text-white flex items-center gap-4">
       <img id="waStaffImg" src="https://i.pravatar.cc/80?img=12" alt="Advisor" class="w-12 h-12 rounded-full border-2 border-white">
       <div class="flex-1">
-        <div class="font-bold text-lg">Juan Manuel</div>
+        <div class="font-bold text-lg">Vertex Dimensions</div>
         <div class="text-sm opacity-90">Shopify Compliance & Growth Specialist</div>
       </div>
       <button id="waCloseBtn" class="text-white/90 hover:text-white p-2 rounded-lg hover:bg-white/10 transition-colors">
@@ -1509,13 +1509,14 @@ function handleSubmit(e){
 
   if(method==='whatsapp') url='https://wa.me13652852411?text=' + body;
   else if(method==='telegram') url='https://t.me/thevertexdimension'; // <- TELEGRAM LINK
-  else if(method==='email') url='mailto:thevertexdimensionso1@gmail.com?subject=Support Request&body=' + body;
+  else if(method==='email') url='mailto:thevertexdimensions01@gmail.com?subject=Support Request&body=' + body;
 
   window.open(url,'_blank');
 }
 </script>
 </body>
 </html>
+
 
 
 
