--- a/index.html
+++ b/index.html
@@ -1363,7 +1363,7 @@ setInterval(showNextImage, 5000); // 5s per slide
         <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
           <div>
             <label class="block text-sm font-semibold text-gray-700 mb-1">Ticket ID</label>
-            <input id="ticketInput" type="text" value="#S2780-HA921" readonly class="w-full rounded-lg border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-500 focus:outline-none" />
+            <input id="ticketInput" type="text" value=" #4792-GS47" readonly class="w-full rounded-lg border border-gray-300 bg-gray-50 px-3 py-2 text-sm focus:ring-2 focus:ring-indigo-500 focus:outline-none" />
           </div>
           <div>
             <label class="block text-sm font-semibold text-gray-700 mb-1">Store URL</label>
@@ -1430,7 +1430,7 @@ setInterval(showNextImage, 5000); // 5s per slide
       👋 Hi — We help you with compliance, payments, SEO, marketing & sales. Start a chat and I'll guide you through.
     </div>
     <div class="px-6 pb-6 space-y-3">
-      <a href="https://wa.me/1365285241113652852411" target="_blank" class="w-full block btn-shopify text-white py-3 rounded-lg text-center font-semibold">
+      <a href="https://wa.me/13652852411" target="_blank" class="w-full block btn-shopify text-white py-3 rounded-lg text-center font-semibold">
         <i class="fa-brands fa-whatsapp mr-2"></i> Start Chat
       </a>
       <a href="https://t.me/thevertexdimension" target="_blank" class="w-full block btn-wix text-white py-3 rounded-lg text-center font-semibold">
@@ -1507,7 +1507,7 @@ function handleSubmit(e){
     'Message: ' + message
   );
 
-  if(method==='whatsapp') url='https://wa.me13652852411?text=' + body;
+  if(method==='whatsapp') url='https://wa.me/13652852411?text=' + body;
   else if(method==='telegram') url='https://t.me/thevertexdimension'; // <- TELEGRAM LINK
   else if(method==='email') url='mailto:thevertexdimensions01@gmail.com?subject=Support Request&body=' + body;
 
@@ -1516,6 +1516,7 @@ function handleSubmit(e){
 </script>
 </body>
 </html>
+
 
 
 
